fix(select): vertical align

--- a/styles/BasePicker.scss
+++ b/styles/BasePicker.scss
@@ -7,6 +7,8 @@
   border-radius: $select-border-radius;
   width: 100%;
   max-width: 100%;
+  display: inline-block;
+  vertical-align: bottom;
   .n-base-picker__mark {
     position: absolute;
     top: 50%;
@@ -31,6 +33,9 @@
     background-color: $select-background-color;
   }
   .n-base-picker-label {
+    display: inline-block;
+    width: 100%;
+    vertical-align: bottom;
     .n-base-picker-label__input {
       outline: none;
       box-sizing: border-box;
@@ -56,6 +61,9 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    display: inline-block;
+    width: 100%;
+    vertical-align: bottom;
     .n-base-picker-tag {
       vertical-align: bottom;
       box-sizing: border-box;
